# serview

./: app.py  pyproject.toml
widgets/: __init__.py  config_modal.py  css.py  message_box.py  outgoing_message.py  port_list.py
widgets/css/: config_modal.tcss
